--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ six>=1.9.0
 pandas>=0.17.1
 matplotlib>=1.5.0
 appdirs>=1.4.0
-futures>=3.0.5
+futures>=3.0.5; python_version < '3.0'
 future>=0.16.0
 pyprind>=2.9.6
 configparser>=3.5.0
