--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,4 @@
-numpy>=1.9.1
-pyparsing>=2.0.3
-python-dateutil>=2.4.0
-six>=1.9.0
-pandas>=0.17.1
-matplotlib>=3.0.3
-appdirs>=1.4.0
-futures>=3.0.5; python_version < '3.0'
-future>=0.16.0
-configparser>=3.5.0
-seaborn>=0.8.1
-hjson>=2.0.2
-enum34>=1.1.6; python_version < '3.5'  
-lz4>=1.1.0
-https://github.com/achim1/dashi/zipball/master#egg=dashi
-
-
-
+numpy>=1.18.4
+tqdm>=4.46
+matplotlib>=3.2.1
+seaborn>=0.10.1
